--- a/foldrs/impressum.html
+++ b/foldrs/impressum.html
@@ -19,7 +19,14 @@
         <p>Baltzstraße 6</p>
         <p>54296 Trier</p>
         <p>Deutschland</p>
+        <p><a class="w3-button" href="index.html">Zurück</a></p>
     </div>
 </div>
+<footer class="w3-container w3-padding-32 blue w3-center w3-margin-top animate-opac-2">
+    <div class="w3-bar">
+        <a class="w3-button" href="privacy.html" >Datenschutzerklärung</a>
+        <a class="w3-button" href="terms.html" >AGB</a>
+    </div>
+</footer>
 </body>
 </html>
