--- a/foldrs/index.html
+++ b/foldrs/index.html
@@ -59,7 +59,7 @@
 </head>
 <body class="blue w3-content">
 <div class="w3-padding-64 w3-center animate-opac-0">
-    <img class="image" src="assets/logo.png" alt="Foldrs-logo">
+    <a href="index.html"><img class="image" src="assets/logo.png" alt="Foldrs-logo"></a>
     <h2 class="w3-xxlarge animate-opac"><b>Schreibt zusammen eine Geschichte</b></h2>
 </div>
 <div class="w3-padding white animate-opac-1">
@@ -80,7 +80,11 @@
 </div>
 
 <footer class="w3-container w3-padding-32 blue w3-center w3-margin-top animate-opac-2">
-    <p><a  href="../impressum.html" target="_blank">Impressum</a></p>
+    <div class="w3-bar">
+        <a class="w3-button" href="impressum.html" >Impressum</a>
+        <a class="w3-button" href="privacy.html" >Datenschutzerklärung</a>
+        <a class="w3-button" href="terms.html" >AGB</a>
+    </div>
 </footer>
 </body>
 </html>
