--- a/foldrs/impressum.html
+++ b/foldrs/impressum.html
@@ -15,7 +15,7 @@
     <div class="w3-card white" style="width: 300px; margin: auto">
         <h3 class="w3-black">Impressum</h3>
         <p>Benedikt Lüken-Winkels</p>
-        <a href="mailto:b.lueken.winkels@gmail.com">b.lueken.winkels@gmail.com</a>
+        <a href="mailto:foldrs.app@gmail.com">foldrs.app@gmail.com</a>
         <p>Baltzstraße 6</p>
         <p>54296 Trier</p>
         <p>Deutschland</p>
