--- a/foldrs/privacy.html
+++ b/foldrs/privacy.html
@@ -22,6 +22,13 @@
             max-width: 500px;
             height: auto
         }
+
+        @media (max-width: 600px) {
+            .image {
+                max-width: 100%;
+                height: auto
+            }
+        }
     </style>
 </head>
 <body class="blue w3-content">
